--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,39 +1,42 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Learn Arkiv by Building
+description: Master Arkiv through hands-on tutorials. Build real applications with blockchain-backed data storage and retrieval.
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: Build a live crypto dashboard powered by Arkiv in 15 minutes.
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Start Building
+      link: /tutorial/01-overview/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: View on GitHub
+      link: https://github.com/arkiv-network
       icon: external
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## What is Arkiv?
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+**Arkiv** is a decentralized data layer that makes it simple to persist, query, and share blockchain-backed datasets. Think of it as a persistent storage solution where your data is immutable, verifiable, and accessible from anywhere.
+
+Whether you're building analytics dashboards, data-driven dApps, or need reliable blockchain data indexing, Arkiv provides the infrastructure to make it happen.
+
+## Ready to Start?
+
+Jump into the first step and start building your Arkiv-powered application:
+
+<Card title="Begin Tutorial: Environment Setup" icon="rocket">
+  Set up your development environment, generate a testnet wallet, and prepare your project.
+  
+  [Get Started →](/tutorial/01-environment-setup/)
+</Card>
+
+---
+
+## Need Help?
+
+- 📖 Check the [Arkiv SDK documentation](https://github.com/arkiv-network)
+- 💬 Join the community discussions
+- 🐛 Report issues on GitHub
+
+Let's build something amazing with Arkiv! 🚀
