add favicon and rename tutorial directory

--- a/src/content/docs/fullstack-tutorial/04-visualizing-on-the-frontend.mdx
+++ b/src/content/docs/fullstack-tutorial/04-visualizing-on-the-frontend.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Visualizing the Data on the frontend'
+title: 'Visualizing the Data'
 description: 'Build a dashboard with HTML, CSS, and JS to query Arkiv and display data.'
 ---
 
