--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ hero:
   tagline: Build a live crypto dashboard powered by Arkiv in 15 minutes.
   actions:
     - text: Start Building
-      link: /tutorial/01-overview/
+      link: /fullstack-tutorial/01-overview/
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/arkiv-network
