add preview image

--- a/src/content/docs/fullstack-tutorial/01-overview.mdx
+++ b/src/content/docs/fullstack-tutorial/01-overview.mdx
@@ -19,8 +19,10 @@ We will build a complete application consisting of two main parts:
 
 By the end of this tutorial, you will have a dashboard that displays:
 
-- A horizontal bar chart of the market caps for the three tokens.
-- Separate line charts tracking the price history of each token.
-- A display of the current price for each token, with a percentage change indicator.
+- The latest prices of BTC, ETH, and GLM
+- Price changes over time, updated every minute
+- Overview of the market capitalization for each cryptocurrency
+
+![Final Dashboard Preview](../../../assets/fullstack-tutorial-screenshot.png)
 
 This guide is designed to be a hands-on learning experience. We'll break down each step, explain the code, and show you how to connect all the pieces. Let's get started!
