add source code of fullstack tutorial to the repo

--- a/src/content/docs/fullstack-tutorial/05-summary-and-next-steps.mdx
+++ b/src/content/docs/fullstack-tutorial/05-summary-and-next-steps.mdx
@@ -39,6 +39,10 @@ Congratulations! You have successfully built a full-stack, decentralized applica
 - You built a **vanilla JS frontend** that acts as a data consumer, querying the Arkiv blockchain with a public client and visualizing the results.
 - You learned the fundamentals of the Arkiv SDK, including `createWalletClient` for writing, `createPublicClient` for reading, and the query builder for filtering data.
 
+## Full Source Code
+
+You can find the complete source code for this tutorial on GitHub: https://github.com/Arkiv-Network/learn-arkiv/tree/main/tutorial-source-code/fullstack-tutorial 
+
 ## Next Steps
 
 This project is a great starting point. Here are some ideas to expand on what you've learned:
