publish live demo of fullstack app

--- a/src/content/docs/fullstack-tutorial/01-overview.mdx
+++ b/src/content/docs/fullstack-tutorial/01-overview.mdx
@@ -25,4 +25,6 @@ By the end of this tutorial, you will have a dashboard that displays:
 
 ![Final Dashboard Preview](../../../assets/fullstack-tutorial-screenshot.png)
 
+Check out a live demo of the final application [here](https://arkiv-network.github.io/learn-arkiv/_demos/fullstack-tutorial/).
+
 This guide is designed to be a hands-on learning experience. We'll break down each step, explain the code, and show you how to connect all the pieces. Let's get started!
